--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "joga",
-  "version": "0.0.1",
-  "homepage": "https://github.com/nicolasfont/jogajs",
+  "version": "0.0.4",
+  "homepage": "http://jogajs.com",
   "authors": [
     "Nicolas Font <nicolasfont@gmail.com>"
   ],
   "description": "A JavaScript library for building UIs",
-  "main": "joga.js",
+  "main": "dist/joga.js",
   "keywords": [
     "joga",
     "jogajs",
@@ -19,6 +19,11 @@
   ],
   "license": "MIT",
   "ignore": [
-    "tests"
+    ".gitignore",
+    "joga",
+    "tests",
+    "gulpfile.js",
+    "joga.js",
+    "package.json"
   ]
 }
