--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "joga",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "homepage": "http://jogajs.com",
   "authors": [
     "Nicolas Font <nicolasfont@gmail.com>"
@@ -20,10 +20,9 @@
   "license": "MIT",
   "ignore": [
     ".gitignore",
-    "joga",
+    "src",
     "tests",
     "gulpfile.js",
-    "./joga.js",
     "package.json"
   ]
 }
