--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "gulp": "~3.6.2",
     "gulp-requirejs": "~0.1.3",
+    "gulp-uglify": "~0.3.0",
     "almond": "~0.2.9"
   }
 }
