--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joga",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "A JavaScript library for building UIs",
   "main": "joga.js",
   "directories": {
@@ -31,6 +31,7 @@
     "gulp": "~3.6.2",
     "gulp-requirejs": "~0.1.3",
     "gulp-uglify": "~0.3.0",
+    "gulp-license": "~0.2.0",
     "almond": "~0.2.9"
   }
 }
