--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "joga",
-  "version": "0.1.0pre",
+  "version": "0.1.0",
   "homepage": "http://jogajs.com",
   "authors": [
     "Nicolas Font <nicolasfont@gmail.com>"
