--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gulp": "~3.6.2",
     "gulp-requirejs": "~0.1.3",
     "gulp-uglify": "~0.3.0",
-    "gulp-header": "~1.0.2"
-    "almond": "~0.2.9",
+    "gulp-header": "~1.0.2",
+    "almond": "~0.2.9"
   }
 }
