--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "gulp-requirejs": "~0.1.3",
     "gulp-uglify": "~0.3.0",
     "gulp-header": "~1.0.2",
-    "almond": "~0.2.9"
+    "almond": "~0.2.9",
+    "gulp-qunit": "~0.3.2",
+    "node-qunit-phantomjs": "~0.2.1"
   }
 }
