--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "url": "https://github.com/nicolasfont/jogajs/issues"
   },
   "devDependencies": {
+    "almond": "~0.2.9",
     "gulp": "~3.6.2",
     "gulp-requirejs": "~0.1.3",
     "gulp-uglify": "~0.3.0",
     "gulp-header": "~1.0.2",
-    "almond": "~0.2.9",
     "gulp-qunit": "~0.3.2",
-    "node-qunit-phantomjs": "~0.2.1"
+    "gulp-jshint": "~1.6.1"
   }
 }
