--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joga",
-  "version": "0.2.0pre",
+  "version": "0.2.0",
   "description": "A JavaScript library for building UIs",
   "main": "joga.js",
   "directories": {
